--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,51 +6,62 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+
     <ImageView
-            android:src="@drawable/FEF"
+            android:src="@drawable/fef"
             android:layout_width="131dp"
             android:layout_height="153dp"
-            android:id="@+id/imageView3" android:contentDescription="@string/fef"
-            android:layout_marginTop="84dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="140dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="140dp"/>
+            android:id="@+id/imageView" android:contentDescription="@string/fef"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.488"/>
     <TextView
             android:text="CAMPEONATO ECUATORIOANO DE FUTBOL"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:textStyle="bold"/>
+            android:layout_height="wrap_content" android:id="@+id/textView2"
+            android:textStyle="bold"
+            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:text="Usuario"
             android:ems="10"
-            android:id="@+id/editText" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="96dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"/>
+            android:id="@+id/txtUsuario"
+            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:text="Contraseña"
             android:ems="10"
-            android:id="@+id/editText2"
-            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginStart="96dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"/>
+            android:id="@+id/txtPassword"
+            app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"/>
     <Button
             android:text="Registrarse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="148dp" android:layout_marginStart="148dp"
-            app:layout_constraintTop_toBottomOf="@+id/button2"/>
+            android:layout_width="124dp"
+            android:layout_height="43dp" android:id="@+id/tvRegistrese"
+            app:layout_constraintTop_toBottomOf="@+id/btnIngresar" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
     <Button
             android:text="Iniciar Sesion"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button2"
-            android:layout_marginTop="84dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="144dp" android:layout_marginStart="144dp"/>
+            android:layout_height="wrap_content" android:id="@+id/btnIngresar"
+            android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtPassword" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
