--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,53 +15,60 @@
             android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.488"/>
+            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.488"
+            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>
     <TextView
-            android:text="CAMPEONATO ECUATORIOANO DE FUTBOL"
+            android:text="CAMPEONATO ECUATORIANO DE FUTBOL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView2"
             android:textStyle="bold"
             android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="8dp" android:layout_marginBottom="29dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtUsuario"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="Usuario"
             android:ems="10"
             android:id="@+id/txtUsuario"
             android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="8dp"
+            android:hint="Usuario" android:layout_marginBottom="28dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtPassword"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="Contraseña"
+            android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/txtPassword"
-            app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
+            android:layout_marginStart="99dp" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtUsuario" android:layout_marginBottom="29dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnIngresar" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="99dp" android:layout_marginRight="99dp" android:hint="Contraseña"/>
     <Button
             android:text="Registrarse"
             android:layout_width="124dp"
             android:layout_height="43dp" android:id="@+id/tvRegistrese"
-            app:layout_constraintTop_toBottomOf="@+id/btnIngresar" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="14dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnIngresar" android:layout_marginBottom="193dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="Iniciar Sesion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/btnIngresar"
-            android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtPassword" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" android:layout_marginTop="29dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
+            app:layout_constraintBottom_toTopOf="@+id/tvRegistrese"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
