Cambios en Votacion

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -28,17 +28,17 @@
                 android:layout_height="wrap_content" android:id="@+id/button" tools:layout_editor_absoluteY="635dp"
                 tools:layout_editor_absoluteX="161dp"/>
         <CheckBox
-                android:text="CheckBox"
+                android:text="Fecha18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="286dp"
                 tools:layout_editor_absoluteX="153dp" android:id="@+id/checkBox"/>
         <CheckBox
-                android:text="CheckBox"
+                android:text="Fecha 17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="376dp"
-                tools:layout_editor_absoluteX="29dp" android:id="@+id/checkBox2"/>
+                tools:layout_editor_absoluteX="49dp" android:id="@+id/checkBox2"/>
         <CheckBox
-                android:text="CheckBox"
+                android:text="Fecha 19"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="376dp"
                 tools:layout_editor_absoluteX="266dp" android:id="@+id/checkBox3"/>
