--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -6,41 +6,80 @@
              tools:context=".perfil">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" android:id="@+id/votar">
+        <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/spinner"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="152dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView39"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"/>
         <TextView
                 android:text="VOTACIONES JUGADOR DE LA FECHA"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView37" tools:layout_editor_absoluteY="143dp"
-                tools:layout_editor_absoluteX="86dp"/>
+                android:layout_height="wrap_content" android:id="@+id/textView37"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="128dp"/>
         <TextView
                 android:text="ESCOGER LA FECHA "
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView38" tools:layout_editor_absoluteY="201dp"
-                tools:layout_editor_absoluteX="139dp"/>
+                android:layout_height="wrap_content" android:id="@+id/textView38"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintHorizontal_bias="0.49" android:layout_marginTop="96dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView37"/>
         <TextView
                 android:text="ESCOGER JUGADOR"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textView39" tools:layout_editor_absoluteY="445dp"
-                tools:layout_editor_absoluteX="139dp"/>
-        <Button
-                android:text="VOTAR"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/button" tools:layout_editor_absoluteY="635dp"
-                tools:layout_editor_absoluteX="161dp"/>
+                android:layout_height="wrap_content" android:id="@+id/textView39"
+                app:layout_constraintTop_toBottomOf="@+id/checkBox"
+                android:layout_marginTop="116dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+        />
         <CheckBox
                 android:text="Fecha18"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" tools:layout_editor_absoluteY="286dp"
-                tools:layout_editor_absoluteX="153dp" android:id="@+id/checkBox"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView38" android:layout_marginTop="36dp"/>
         <CheckBox
                 android:text="Fecha 17"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" tools:layout_editor_absoluteY="376dp"
-                tools:layout_editor_absoluteX="49dp" android:id="@+id/checkBox2"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox2" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/checkBox3" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="320dp" app:layout_constraintHorizontal_bias="0.447"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
         <CheckBox
                 android:text="Fecha 19"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" tools:layout_editor_absoluteY="376dp"
-                tools:layout_editor_absoluteX="266dp" android:id="@+id/checkBox3"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="68dp"
+                android:layout_marginRight="68dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="320dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
+        <Button
+                android:text="VOTAR"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/button"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
